--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.25.0",
     "i18n-js": "^3.8.0",
+    
     "lodash.memoize": "^4.1.2",
     "react": "17.0.2",
-    "react-native": "0.67.2",
+    "react-native": "^0.67.2",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.6",
     "react-native-contacts": "^7.0.4",
@@ -51,6 +52,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-keyboard": "^2.2.0",
     "react-native-keychain": "^8.0.0",
     "react-native-maps": "^1.3.2",
     "react-native-otp-inputs": "^7.4.0",
@@ -61,6 +63,7 @@
     "react-native-safe-area-context": "^3.4.0",
     "react-native-screens": "^3.11.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.1",
     "socket.io-client": "^4.5.1"
@@ -90,13 +93,7 @@
     "redux-mock-store": "^1.5.4",
     "standard-version": "^9.3.2"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "node ./scripts/checkCommitMsg.js $HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run testUnits&npm run testSnapshots&npm run checkForbiddenWords&npm run lint",
-      "post-merge": "bash ./scripts/checkForDependencyChange"
-    }
-  },
+  
   "jest": {
     "preset": "react-native",
     "roots": [
